After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 749669 - rtp: fix collection of statistic
rtp: fix collection of statistic
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other All
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-05-21 09:40 UTC by sancane
Modified: 2015-05-21 09:56 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch provided with git format-patch (1.55 KB, patch)
2015-05-21 09:40 UTC, sancane
committed Details | Review

Description sancane 2015-05-21 09:40:47 UTC
Created attachment 303731 [details] [review]
patch provided with git format-patch

PLI and FIR messages are being collecting on the wrong rtpsource (the sender one), this patch fixes this issue by setting them on the proper rtpsource.
Comment 1 Sebastian Dröge (slomo) 2015-05-21 09:56:33 UTC
commit 2fb1fe2ee3a3fd6c71839181a8d2ee76923e638a
Author: Santiago Carot-Nemesio <sancane@gmail.com>
Date:   Thu May 21 09:35:58 2015 +0200

    rtpsession: Fix collection of statistics
    
    Stats should be collected on the media rtp source not in the
    sender one.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=749669